# cargo-custom-command

./: Cargo.toml
src/: main.rs
